# ros2_CV2_AlexaVoiceController

src/arduino_pkg/: CMakeLists.txt  package.xml
src/arduino_pkg/arduino_pkg/: simple_serial_reciver.py  simple_serial_tranmitter.py  test_ar.py  test_pub.py  test_sub.py
src/car_control/: CMakeLists.txt  package.xml
src/car_control/car_control/: car_control_publisher.py  car_control_subscriber.py
src/cv_node/: package.xml  setup.py
src/cv_node/cv_node/: gesture.py  gesture_publisher.py  gesture_subscriber.py  node_test.py  webcam_pub.py  webcam_sub.py
src/pkg_cpp/: CMakeLists.txt  package.xml
src/pkg_cpp/src/: simpel_camera_node.cpp
src/pkg_py/: package.xml  setup.py
src/pkg_py/pkg_py/: computer_vision_node.py  first.py  robot_new.py  smartPhone.py
src/robot_msg/: CMakeLists.txt  package.xml
src/robot_msg/action/: Move.action
src/voice_robot/: CMakeLists.txt  package.xml
src/voice_robot/voice_robot/: alexa22.py  alexa_control.py  serve_action.py  voice_car.py
